# wapiti33

./: Pipfile  SECURITY.md  pyproject.toml
.github/workflows/: bandit.yml  codacy.yml  main.yml  pysa.yml
tests/attack/: test_mod_ssl.py
tests/data/spip/: ajaxCallback.js
wapitiCore/attack/: mod_ssl.py
wapitiCore/parsers/: commandline.py
