[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "wapiti3"
version = "3.2.4"
description = "A web application vulnerability scanner"
readme  = "README.rst"
requires-python = ">=3.12,<3.14"
authors = [
        {name="Nicolas Surribas", email="nicolas.surribas@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: System Administrators",
        "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: POSIX",
        "Operating System :: Unix",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Security",
        "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
        "Topic :: Software Development :: Testing"
]
dependencies = [
        "aiocache==0.12.3",
        "aiohttp==3.12.6",
        "aiosqlite==0.21.0",
        "wapiti-arsenic==28.2",
        "beautifulsoup4==4.13.4",
        "browser-cookie3==0.20.1",
        "dnspython==2.7.0",
        "h11>=0.16.0,<0.17",
        "httpcore==1.0.9",
        "httpx[brotli, socks]==0.28.1",
        "httpx-ntlm==1.4.0",
        "humanize==4.12.3",
        "loguru==0.7.3",
        "mako==1.3.10",
        "markupsafe==3.0.2",
        "mitmproxy==12.1.1",
        "msgpack==1.0.8",  # required by mitmproxy, lower version may require g++
        "packaging==25.0",
        "pyasn1==0.6.1",
        "sqlalchemy==2.0.41",
        "tld==0.13.1",
        "typing-extensions>=4.12.0",  # prevent annotation assertion errors within sqlalchemy
        "urwid==3.0.2",  # required by mitmproxy, lower versions conflict with typing-extensions
        "yaswfp==0.9.3",
        "wapiti-swagger==0.1.9",
]

[project.urls]
homepage = "https://wapiti-scanner.github.io/"
repository = "https://github.com/wapiti-scanner/wapiti"

[project.scripts]
wapiti = "wapitiCore.main.wapiti:wapiti_asyncio_wrapper"
wapiti-getcookie = "wapitiCore.main.getcookie:getcookie_asyncio_wrapper"

[project.optional-dependencies]
test = [
        "humanize==4.12.3",
        "pytest==8.3.5",
        "pytest-cov==6.1.1",
        "pytest-asyncio==0.26.0",
        "respx==0.22.0",
]
dev = [
        "build",
        "humanize==4.12.3",
        "pylint==3.3.7",
        "pytest==8.3.5",
        "pytest-cov==6.1.1",
        "pytest-asyncio==0.26.0",
        "respx==0.22.0",
        "wheel",
]

[tool.setuptools.packages]
find = {exclude=["tests*"]}

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov --cov-report=xml"

[tool.coverage.run]
source = ["wapitiCore"]

[tool.coverage.report]
show_missing = true
